--- a/css/table.css
+++ b/css/table.css
@@ -441,6 +441,7 @@ td.bottom:has(>.main[height="75px"]) {
     padding: 0 !important;
     & .main {
       height: 100%;
+      width: 100%;
       & tr {
         display: flex;
         flex-flow: row wrap;
@@ -483,4 +484,8 @@ tr:has(>td.bottom>.main[height="75px"]) {
   flex-flow: row wrap;
   gap: .5rem;
   margin-bottom: .5rem;
+}
+/* break long unbreakable string */
+.main[border="0"][cellspacing="0"][cellpadding="0"] .embedded > table[width="100%"][cellpadding="5"] td {
+  word-break: break-word;
 }
